Version bump - getPreset bug fix - category browser scrollbar and tooltip changes

--- a/multi-token-edit/styles/general.css
+++ b/multi-token-edit/styles/general.css
@@ -885,6 +885,7 @@ nav > a[data-tab='me-pinned'] {
   border-right: 1px solid #414141;
   padding-right: 4px;
   padding-left: 4px;
+  overflow-y: auto;
 }
 
 .mass-edit-category-browser .category-list.top {
